--- a/style.css
+++ b/style.css
@@ -524,6 +524,8 @@ header {
         padding-top: 10px;
         font-size: 13px;
         font-weight: 500;
+        line-height: 13px;
+        letter-spacing: 0.5px;
     }
 
     .card-container {
