--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
+@import '@fontsource/hauora-sans/200.css';
+@import '@fontsource/hauora-sans/300.css';
+@import '@fontsource/hauora-sans/400.css';
+@import '@fontsource/hauora-sans/500.css';
+@import '@fontsource/hauora-sans/600.css';
+@import '@fontsource/hauora-sans/700.css';
+@import '@fontsource/hauora-sans/800.css';
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Bahnschrift SemiBold;
+    font-family: 'Hauora Sans', sans-serif;
 }
 
 body {
@@ -159,10 +166,10 @@ header {
     color: #133A73;
     padding: 0 1%;
     line-height: 100px;
-    font-size: 105px;
+    font-size: 95px;
     letter-spacing: -4.2px;
     margin-bottom: 2.5rem;
-    font-weight: 600;
+    font-weight: 700;
 }
 
 #hero img {
@@ -176,10 +183,10 @@ header {
     }
 
     #hero .head_line {
-        font-size: 25px;
-        /* font-weight:700; */
-        line-height: 25px;
-        letter-spacing: 1px;
+        font-size: 30px;
+        font-weight:700;
+        line-height: 32px;
+        letter-spacing: -1.13px;
     }
 
     .row {
@@ -323,8 +330,8 @@ header {
     color: #133A73;
     padding: 0 1%;
     font-size: 85px;
-    font-weight: 900;
-    line-height: 90px;
+    font-weight: 700;
+    line-height: 99px;
     letter-spacing: -4.2px;
     text-align: right;
 }
@@ -371,7 +378,9 @@ header {
     color: #133A73;
     padding: 0 1%;
     font-size: 96px;
-    font-weight: 900;
+    font-weight: 700;
+    line-height: 102px;
+    letter-spacing: -4.2px;
     width: 100%;
 }
 
@@ -385,7 +394,8 @@ header {
     color: #133A73;
     font-weight: 500;
     margin-top: 30px;
-    line-height: 28px;
+    line-height: 25px;
+    letter-spacing: 0.5px;
     text-align: left;
     padding-right: 1.9rem;
 }
@@ -418,9 +428,11 @@ header {
         position: static;
         color: #133A73;
         padding: 1% 1%;
-        font-size: 30px;
+        font-weight: 700;
+        font-size: 27px;
         width: 100%;
-        line-height: 25px;
+        line-height: 28px;
+        letter-spacing: -0.5px;
     }
 
     #about_us img {
@@ -453,8 +465,10 @@ header {
 
 #services .head_line {
     color: #133A73;
-    font-size: 95px;
-    letter-spacing: -3.3px;
+    font-size: 96px;
+    letter-spacing: -4.2px;
+    line-height: 102px;
+    font-weight: 700;
     width: 100%;
 }
 
@@ -463,7 +477,7 @@ header {
     color: #133A73;
     font-weight: 500;
     margin-top: 30px;
-    line-height: 28px;
+    line-height: 25px;
     letter-spacing: 0.5px;
     text-align: left;
     padding-right: 1.9rem;
@@ -658,8 +672,11 @@ header {
     margin: 10px 0;
 }
 
-p {
-    line-height: 1.5;
+.slide p {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+    letter-spacing: -0.5px;
 }
 
 
@@ -755,6 +772,13 @@ p {
         padding: 10%;
     }
 
+    .slide p{
+        font-size: 15px;
+        font-weight: 400;
+        line-height: 20px;
+        letter-spacing: -0.5px;
+    }
+
     .p-details {
         width: 110%;
         padding: 5px 5px;
@@ -816,7 +840,7 @@ p {
     color: #133A73;
     font-size: 96px;
     font-weight: 700;
-    letter-spacing: -3.8px;
+    letter-spacing: -4.2px;
     line-height: 102px;
     width: 100%;
 }
@@ -883,7 +907,7 @@ p {
         text-align: left;
         line-height: 28px;
         letter-spacing: -0.5px;
-        font-size: 32px;
+        font-size: 27px;
         font-weight: 700;
         margin-top: 2rem;
     }
@@ -893,6 +917,7 @@ p {
         text-align: left;
         font-size: 15px;
         line-height: 15px;
+        font-weight: 600;
         letter-spacing: -0.5px;
     }
 
