--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ header {
     color: #133A73;
     padding: 0 1%;
     line-height: 100px;
-    font-size: 95px;
+    font-size: 96px;
     letter-spacing: -4.2px;
     margin-bottom: 2.5rem;
     font-weight: 700;
@@ -329,7 +329,7 @@ header {
 #m_insurance .head_line {
     color: #133A73;
     padding: 0 1%;
-    font-size: 85px;
+    font-size: 96px;
     font-weight: 700;
     line-height: 99px;
     letter-spacing: -4.2px;
@@ -338,7 +338,7 @@ header {
 
 #m_insurance img {
     position: relative;
-    bottom: 50px;
+    bottom: 20px;
 }
 
 @media (max-width: 992px) {
@@ -370,7 +370,7 @@ header {
 
 #about_us {
     padding: 0 6%;
-    margin-top: 3rem;
+    margin-top: 4rem;
     letter-spacing: -1px;
 }
 
@@ -495,7 +495,7 @@ header {
     flex-direction: column;
     align-items: center;
     margin: 0 20px;
-    background-color: #d9d9d9;
+    background-color: #E9E6DE;
     padding: 10px;
     border-radius: 10px;
 }
