--- a/style.css
+++ b/style.css
@@ -88,6 +88,12 @@ header {
     overflow: hidden;
 }
 
+@media not all and (min-resolution:.001dpcm) {
+    .dropdown_menu {
+      background-color: rgba(255, 255, 255, 0.7); /* Semi-transparent background color */
+    }
+  }
+
 .dropdown_menu.open {
     height: 240px;
 }
