--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ header {
     top: 60px;
     width: 300px;
     height: 0;
-    background: rgba(138, 138, 138, 0.1);
+    background: rgba(255,255,255);
     backdrop-filter: blur(16px);
     border-radius: 10px;
     overflow: hidden;
@@ -90,7 +90,7 @@ header {
 
 @media not all and (min-resolution:.001dpcm) {
     .dropdown_menu {
-      background-color: rgba(255, 255, 255, 0.7); /* Semi-transparent background color */
+      background-color: rgba(255, 255, 255); /* Semi-transparent background color */
     }
   }
 
