--- a/about_style.css
+++ b/about_style.css
@@ -198,6 +198,36 @@ header {
     border-radius: 17.51px;
 }
 
+@media screen and (max-width: 480px) {
+    #intro{
+        padding: 0;
+    }
+    .sec1{
+        flex-direction: column;
+    }
+    .sec1 h1{
+        font-size: 27px;
+        line-height: 50px;
+    }
+    .sec1 h2{
+        margin: 10px 0 20px 0;
+        line-height: 26px;
+        font-size: 19px;
+    }
+    .sec1 p{
+        line-height: 13px;
+        font-size: 13px;
+        margin-bottom: 20px;
+    }
+    .area{
+        width: 100%;
+    }
+    .area img{
+        width: 100%;
+        height: 100%;
+    }
+}
+
 .sec2{
     padding: 0 5%;
 }
@@ -244,6 +274,32 @@ header {
     color: #365A88;
 }
 
+@media screen and (max-width: 480px) {
+    .sec2 h2{
+        line-height: 36px;
+        font-size: 21px;
+        text-align: left;
+        margin-top: 30px;
+    }
+    .why{
+        flex-direction: column;
+    }
+    .whyr{
+        width: 100%;
+        padding: 0;
+    }
+    .whyr h3{
+        font-size: 15px;
+        margin-top: 30px;
+        letter-spacing: 0.25px;
+    }
+    .whyr p{
+        font-size: 13px;
+        line-height: 106.5%;
+        letter-spacing: 0.5px;
+    }
+}
+
 .sec3{
     padding: 0 5%;
     margin-top: 80px;
@@ -259,6 +315,17 @@ header {
     text-align: justify;
     color: #365A88;
     padding: 15px 0 0 0;
+}
+
+@media screen and (max-width: 480px) {
+    .sec3{
+        margin-top: 30px;
+    }
+    .sec3 p{
+        font-size: 13px;
+        line-height: 106.5%;
+        letter-spacing: 0.5px;
+    }
 }
 
 
@@ -358,6 +425,9 @@ header {
 }
 
 @media(max-width: 992px) {
+    .row {
+        flex-direction: column;
+    }   
     .footer {
         margin: 1rem;
         padding: 2rem 0.8rem 2rem 1.3rem;
