--- a/services_style.css
+++ b/services_style.css
@@ -144,6 +144,9 @@ header {
     }
 }
 
+
+
+
 .sec1{
     margin-top: 80px;
     padding: 0 5%;
@@ -414,4 +417,182 @@ header {
 .sec6 .all_s p{
     margin-top: 10px;
     text-align: left;
+}
+
+
+
+
+/*footer*/
+.row {
+    display: flex;
+    flex-direction: row;
+}
+
+.footer {
+    background-color: #E9E6DE;
+    padding: 4rem 4rem 4rem 4rem;
+    margin: 2rem 4rem 2rem 4rem;
+    border-radius: 10px;
+}
+
+.f_links {
+    background-color: #D9D9D9;
+    padding: 20px;
+    border-radius: 16px;
+    font-size: 17px;
+    font-weight: 525;
+    line-height: 30px;
+    letter-spacing: -0.5px;
+    width: 200px;
+    height: 200px;
+}
+
+.f_links ul {
+    list-style-type: none;
+}
+
+.f_links a {
+    text-decoration: none;
+    color: #000;
+}
+
+.column7{
+    width: 30%;
+}
+
+.top_row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.top_row .column h3{
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 29px;
+    letter-spacing: -0.5px;
+}
+
+.top_row img {
+    width: 80%;
+}
+
+.fb_links {
+    background-color: #D9D9D9;
+    padding: 2rem;
+    width: 68%;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: 600;
+    letter-spacing: -0.5px;
+    line-height: 29px;
+}
+
+.fb_links ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.bottom_row {
+    padding-top: 3.5rem;
+    justify-content: space-between;
+}
+
+.bottom_row a {
+    text-decoration: none;
+    color: #000;
+}
+
+.fb_disc,
+.fb_seprator {
+    display: none;
+}
+
+.responsive {
+    display: none;
+}
+
+@media(max-width: 992px) {
+    .row {
+        flex-direction: column;
+    }   
+    .footer {
+        margin: 1rem;
+        padding: 2rem 0.8rem 2rem 1.3rem;
+    }
+
+    .footer li {
+        font-size: 15px;
+        font-weight: 400;
+    }
+
+    .fb_links li {
+        text-decoration: none;
+        list-style-type: none;
+    }
+
+    .top_row img {
+        width: 80%;
+    }
+
+    .f_links {
+        margin-top: 20px;
+        padding: 10px 10px;
+        width: 95%;
+        height: auto;
+        font-size: 15px;
+        font-weight: 700;
+        letter-spacing: -0.3px;
+        line-height: 23px;
+    }
+
+    .fb_links ul {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .fb_links {
+        margin: 20px 0 0 0;
+        padding: 0 10px;
+        flex-direction: column;
+        width: 95%;
+        font-size: 15px;
+        font-weight: 500;
+        line-height: 23px;
+        letter-spacing: -0.3px;
+    }
+
+    .fb_disc,
+    .fb_seprator {
+        display: block;
+    }
+
+    .bottom_row {
+        padding-top: 0;
+    }
+
+    .bottom_row p {
+        font-size: 12px;
+    }
+
+    .non_responsive {
+        display: none;
+    }
+
+    .responsive {
+        display: block;
+        width: 100%;
+        margin: 0 8px 0 8px;
+    }
+
+    .column7{
+        width: 90%;
+    }
+
+    .top_row svg{
+        display: none;
+    }
 }
