--- a/services_style.css
+++ b/services_style.css
@@ -572,8 +572,10 @@ header {
         font-size: 15px;
         margin-top: 20px;
         letter-spacing: 0.25px;
+        line-height: 26px; /* 112.5% */
     }
     .sec6 .all_s p{
+        margin-top: 0;
         text-align: justify;
     }
     .sec6 .last_p{
