--- a/services_style.css
+++ b/services_style.css
@@ -246,7 +246,7 @@ header {
         line-height: 30px;
         font-size: 21px;
         text-align: left;
-        margin: 30px 0;
+        margin: 30px 0 15px 0;
     }
     .sec2 p{
         color: #365A88;
