--- a/about_style.css
+++ b/about_style.css
@@ -201,6 +201,7 @@ header {
 @media screen and (max-width: 480px) {
     #intro{
         padding: 0;
+        letter-spacing: -0.25px;
     }
     .sec1{
         flex-direction: column;
